Set data only tablet properties
These were set in build.prop on tn8. Add to init files for better
commoninization. No reasonable voice capable icera device exists
in the consumer space.

Change-Id: I22ae649c52a2aa315465667b019949b69b1a6449

--- a/initfiles/init.icera.tablet.rc
+++ b/initfiles/init.icera.tablet.rc
@@ -16,6 +16,10 @@ on init
     setprop gsm.modem.crashlogs.directory /data/rfs/data/debug
     setprop ril.maxretries 15
 
+# Data only tablet options
+    setprop ril.icera-config-args "notifier:ON,datastall:ON,lwaactivate"
+    setprop ro.modem.do 1
+
 # Start Icera switcher daemon
 service icera-switcher /vendor/bin/icera-switcherd
     class main
