--- a/initfiles/init.icera.tablet.rc
+++ b/initfiles/init.icera.tablet.rc
@@ -6,7 +6,7 @@
 # documentation without an express license agreement from NVIDIA Corporation
 # is strictly prohibited.
 
-import init.icera.common.rc
+import /vendor/etc/init/hw/init.icera.common.rc
 
 on init
 # rild properties
